--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/icons/sola.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sola</title>
 </head>
